// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
  >
    <span
      class="c-6g68ga soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="cd2zl8d soui-tag-tag c-km7st1 soui-tag-info c1b4zg7 soui-tag-bright"
  >
    <span
      class="c-6g68ga soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="cd2zl8d soui-tag-tag c1zyx0g soui-tag-danger c1b4zg7 soui-tag-bright"
  >
    <span
      class="c-6g68ga soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="cd2zl8d soui-tag-tag c-e8mq0x soui-tag-warning c1b4zg7 soui-tag-bright"
  >
    <span
      class="c-6g68ga soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="cd2zl8d soui-tag-tag c7bcmcm soui-tag-success c1b4zg7 soui-tag-bright"
  >
    <span
      class="c-6g68ga soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-ivn4q8 soui-tag-tangerine c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-j4ktv8 soui-tag-magenta c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7zl0e1 soui-tag-purple c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c4k60cv soui-tag-indigo c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-kmbeow soui-tag-cyan c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-km4sbx soui-tag-neon c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c6sgye soui-tag-lemon c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7gl3u3 soui-tag-orange c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-ivn4q8 soui-tag-tangerine c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-j4ktv8 soui-tag-magenta c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7zl0e1 soui-tag-purple c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c4k60cv soui-tag-indigo c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-kmbeow soui-tag-cyan c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-km4sbx soui-tag-neon c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c6sgye soui-tag-lemon c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7gl3u3 soui-tag-orange c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-ivn4q8 soui-tag-tangerine cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-j4ktv8 soui-tag-magenta cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7zl0e1 soui-tag-purple cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c4k60cv soui-tag-indigo cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-kmbeow soui-tag-cyan cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-km4sbx soui-tag-neon cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c6sgye soui-tag-lemon cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7gl3u3 soui-tag-orange cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Orange
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-ivn4q8 soui-tag-tangerine c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-j4ktv8 soui-tag-magenta c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7zl0e1 soui-tag-purple c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c4k60cv soui-tag-indigo c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-kmbeow soui-tag-cyan c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-km4sbx soui-tag-neon c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c6sgye soui-tag-lemon c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7gl3u3 soui-tag-orange c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Orange
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-km7st1 soui-tag-info c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c1zyx0g soui-tag-danger c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-e8mq0x soui-tag-warning c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7bcmcm soui-tag-success c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-km7st1 soui-tag-info c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c1zyx0g soui-tag-danger c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-e8mq0x soui-tag-warning c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7bcmcm soui-tag-success c-km9tc0 soui-tag-fill"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-km7st1 soui-tag-info cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c1zyx0g soui-tag-danger cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-e8mq0x soui-tag-warning cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7bcmcm soui-tag-success cjwdv8l soui-tag-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-km7st1 soui-tag-info c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c1zyx0g soui-tag-danger c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-e8mq0x soui-tag-warning c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c7bcmcm soui-tag-success c-6y12yd soui-tag-bright-outline"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag carw16 soui-tag-small c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c6q0im soui-tag-large c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="cd2zl8d soui-tag-tag carw16 soui-tag-small c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <div
        class="c-6g68ga soui-tag-wrapper"
      >
        <span
          class="c-oi8krg soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="c-pp0r9o soui-tag-close-icon"
      >
        <span
          class="c98mzgf soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <div
        class="c-6g68ga soui-tag-wrapper"
      >
        <span
          class="c-oi8krg soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="c-pp0r9o soui-tag-close-icon"
      >
        <span
          class="c98mzgf soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c6q0im soui-tag-large c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <div
        class="c-6g68ga soui-tag-wrapper"
      >
        <span
          class="c-oi8krg soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="c-pp0r9o soui-tag-close-icon"
      >
        <span
          class="c98mzgf soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <div
        class="c-6g68ga soui-tag-wrapper"
      >
        <span
          class="c-oi8krg soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="c-pp0r9o soui-tag-close-icon"
      >
        <span
          class="c98mzgf soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
    >
      <div
        class="c-6g68ga soui-tag-wrapper"
      >
        <span
          class="c-oi8krg soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="c-pp0r9o soui-tag-close-icon"
      >
        <span
          class="c98mzgf soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright c-j04p53 soui-tag-disabled"
    >
      <div
        class="c-6g68ga soui-tag-wrapper"
      >
        <span
          class="c-oi8krg soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="c-pp0r9o soui-tag-close-icon"
      >
        <span
          class="c98mzgf soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default cjwdv8l soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="c-6g68ga soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-right: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
  >
    <div
      class="c-6g68ga soui-tag-wrapper"
    >
      <span
        class="c-oi8krg soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="c-pp0r9o soui-tag-close-icon"
    >
      <span
        class="c98mzgf soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="cd2zl8d soui-tag-tag c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
  >
    <span
      class="c-6g68ga soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="cd2zl8d soui-tag-tag c-9x83sg soui-tag-rounded c-7aczvg soui-tag-default c1b4zg7 soui-tag-bright"
  >
    <span
      class="c-6g68ga soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
